fix black buttons overlapping with Spotify login button durring exercise

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -111,7 +111,6 @@ body {
   font-size: 14px;
   padding: 10px 20px;
   text-decoration: none;
-  float: right;
   margin-top: 12px;
 }
 
